# optimal-elections

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
optelect/: __init__.py
optelect/simplex/: __init__.py  matrix_operations.py  simplex_base.py
tests/simplex/: test_matrix_operations.py  test_simplex_base.py
