[tool.poetry]
name = "optelect"
version = "0.1.0"
description = "Litt optimering og parlamentarisme"
authors = ["Trygve Bærland <trygve.baerland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
toml = "^0.10.2"

[tool.pydocstyle]
convention="google"
match = '^((?!test_).)*\.py'
add-ignore =  ["D100", "D104"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
